=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.05 - IN DEVELOPMENT

=over

=item *

Allowed L<Krang::Story>::delete() to be called with the named
parameters 'story_id' (a number) or 'class' (a string or an arrayref
of class names). [Bodo Schulze]

=item *

Added directive B<PreInstallScript> to F<krang_addon.conf> to run a
script before the installation process starts. [Bodo Schulze]

=item *

Added new element class L<Krang::ElementClass::TextInputList>. Added
it to L<Krang::ElementLibrary>'s autoload list, added three examples
to L<TestSet1::page> and its template, and added some CSS to
F<krang.css.tmpl>. [Bodo Schulze]

=item *

Like Stories, find Media and Templates in Live, Retired and Trash when
finding by ID or UUID. [Bodo Schulze]

=item *

Enhanced L<Krang::Publisher>'s additional_content_block() to accept an
optional hashref of category_tmpl_args to pass to L<Krang::Category>'s
fill_template method. [Noam Weinstein]

=item *

Made L<Krang::Element>'s children() method accept one argument to
return a list of children having the given name only, and added
convenience method children_data(). [Bodo Schulze]

=item *

Fixed bug to let the a template's Log be viewed from its "View Detail"
screen. [Bodo Schulze]

=item *

Fixed a bug in L<Krang::Handler> reported by Alice Lincoln: Make sure
a manually created window gets its own id when the user types/copies a
Krang URL into it or accesses another windows URL via the History.
Thanx to Jesse Erlbaum for the referer-based solution to this problem.
Also implemented a workaround in krang.js to force IE6/7 to send the
referer when a link is passed through JavaScript. [Bodo Schulze]

=item * 

Added a server-side paste filter to L<Krang::ElementClass::PoorText>,
triggered by the onPaste event. [Bodo Schulze]


=item * 

Added linked_stories() to L<Krang::ElementClass> to make this interface
available to all element classes, especially WYSIWYG editors and the